--- a/RWD.html
+++ b/RWD.html
@@ -34,17 +34,17 @@
 						<div class="col-4 col-s-12">
 							<div><i class="fa fa-hand-o-up"></i></div>
 								<h3> nagłówek</h3>
-								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Please change this line. Something change.</p>
 						</div>
 						<div class="col-4 col-s-12">
 							<div><i class="fa fa-diamond"></i></div>
 								<h3> nagłówek</h3>
-								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Please change this line.</p>
 						</div>
 						<div class="col-4 col-s-12">
 							<div><i class="fa fa-flask"></i></div>
 								<h3> nagłówek</h3>
-								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+								<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Please change this line.</p>
 						</div>
 					</div>
 				</div>
